<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="0dp"
                android:text="@string/i1"
                android:background="#B2E4B6"
                android:textSize="30sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/home_introduce"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:text="@string/i7"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/home_rote"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:text="@string/i8"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/home_map"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="@string/i9"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:text="VR"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="@string/i10"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="2.VR"
                android:background="#B2E4B6"
                android:textSize="30sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/i2"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/i11"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/i3"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/i12"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/i4"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="@string/i13"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="3.设置"
                android:background="#B2E4B6"
                android:textSize="30sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/i5"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:text="@string/i14"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/language"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:text="@string/i15"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/main"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="85dp"
                    android:text="@string/i16"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#F8F5E9"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/weather"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="@string/i17"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>