<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".function.FuntionIntroduce2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bc">

        <ScrollView android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="29dp"
                        android:background="#AA7869"
                        android:text="@string/c1"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bc1"
                        android:layout_marginBottom="-110dp">

                    </ImageView>
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginLeft="70dp"
                        android:text="@string/c1"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="137dp"
                            android:text="@string/c2"
                            android:textSize="20sp"/>

                        <Button
                            android:id="@+id/jump"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/next1"
                            android:layout_marginLeft="-150dp"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/c3"
                    android:textColor="#8D664B"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:textSize="35sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="阁楼简介"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:layout_marginLeft="20dp"
                        android:background="#FFFAF0"
                        />

                </LinearLayout>
                <View
                    android:layout_height="1px"
                    android:layout_width="wrap_content"
                    android:background="#66CCFF"
                    />
                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/tian" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="2">
                        <TextView
                            android:id="@+id/text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginLeft="25dp"
                            android:textSize="15sp"
                            android:textColor="#000"
                            android:text="@string/c5" />

                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text1"
                    android:padding="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:text="@string/c6"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text2"
                    android:padding="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:text="@string/c7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text3"
                    android:padding="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:text="@string/c8"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text4"
                    android:textSize="15sp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#000"
                    android:text="@string/c9"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="藏书文化"
                    android:textColor="#000000"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="20sp"

                    android:background="#FFFAF0"/>
                <View
                    android:layout_height="1px"
                    android:layout_width="wrap_content"
                    android:background="#66CCFF"
                    />
                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textColor="#000"
                    android:text="@string/c11" />
                <ImageView
                    android:id="@+id/pic1"
                    android:layout_width="199dp"
                    android:layout_height="100dp"

                    android:layout_marginRight="20dp"
                    android:layout_gravity="right"
                    android:scaleType="fitXY"
                    android:src="@drawable/book" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="评论"
                        android:layout_marginLeft="20dp"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:background="#FFFAF0"/>
                    <View
                        android:layout_height="1px"
                        android:layout_width="wrap_content"
                        android:background="#66CCFF"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="25dp"
                            android:src="@drawable/touxiang"/>
                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_centerVertical="true"/>
                        <Button
                            android:id="@+id/bt1"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:layout_gravity="right"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/button_style"
                            android:drawableLeft="@drawable/js"
                            android:text="点评" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="-20dp"
                        android:textColor="#000"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>